# ChangeLog for dev-python/pytest
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pytest/ChangeLog,v 1.96 2014/08/07 09:02:18 jer Exp $

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> pytest-2.4.2.ebuild:
  Stable for HPPA (bug #506042).

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> pytest-2.4.2.ebuild:
  Stable for x86, wrt bug #506042

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> pytest-2.4.2.ebuild:
  Stable for amd64, wrt bug #506042

  24 Jul 2014; Markus Meier <maekke@gentoo.org> pytest-2.4.2.ebuild:
  arm stable, bug #506042

  19 Jul 2014; Tobias Klausmann <klausman@gentoo.org> pytest-2.4.2.ebuild:
  Stable on alpha, bug #506042

  19 Jul 2014; Mike Gilbert <floppym@gentoo.org> pytest-2.4.2.ebuild,
  pytest-2.5.2.ebuild:
  Use python_gen_cond_dep.

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> pytest-2.4.2.ebuild,
  pytest-2.5.2.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

  02 Apr 2014; Tim Harder <radhermit@gentoo.org> pytest-2.5.2.ebuild:
  Add python3_4 support.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pytest-2.3.4.ebuild,
  pytest-2.3.5.ebuild, pytest-2.4.2.ebuild, pytest-2.5.2.ebuild:
  Add support for the new PyPy slotting.

  28 Mar 2014; Ian Delaney <idella4@gentoo.org> pytest-2.3.4.ebuild,
  pytest-2.3.5.ebuild, pytest-2.4.2.ebuild, pytest-2.5.2.ebuild:
  Add dep sphinx for doc build, fixes Bug #493480

*pytest-2.5.2 (01 Feb 2014)

  01 Feb 2014; Tim Harder <radhermit@gentoo.org> +pytest-2.5.2.ebuild:
  Version bump.

  09 Dec 2013; Mike Gilbert <floppym@gentoo.org> pytest-2.4.2.ebuild:
  Restore pexpect dep, but exclude pypy.

  09 Dec 2013; Mike Gilbert <floppym@gentoo.org> pytest-2.4.2.ebuild:
  Drop dep on pexpect and restore pypy support.

  07 Dec 2013; Patrick Lauer <patrick@gentoo.org> pytest-2.4.2.ebuild: