@@ -7,16 +7,18 @@ DIST pytest-2.3.4.zip 527214 SHA256 5616f744a311c5f5fbb44943aaa41c32df70ba132159
 DIST pytest-2.3.5.tar.gz 426328 SHA256 804c28bef415fc6a54de7934f05b2d67a9cc8a230de98685fca274d9fcbe8b1c SHA512 4cda3149ca4b69b88c2df65d7c474506e852ee1daa9e6b1ca3dbde8b7ffe0cce09f2fb4ef696f54df7f6ce807cd472dd8447cfc32686902b2b214b18e5719060 WHIRLPOOL a2dd7c319d73e6c32077685d65785c672dbb6faa01ac4ed116520128a1b03b3a10b88e65957b736132fbc3a667b43840c28081ef4a4a8ddd2cd73f8727c778cf
 DIST pytest-2.4.2.tar.gz 553004 SHA256 bccbbed432b1e95381fbb958c27aabcb751ccc337769091de8b7e5cd25ca00e0 SHA512 2ffbc74c536fa4542b9f9afb257428cde98648c76335bdc8d3fd515fd094410fe1e71e502918d780f1d8070bebf4e4c24b33cab04d0f48ca983d907bfc43d3db WHIRLPOOL e51543a549622dfd204551f3625c62cdac84b33107e5dd493574a6f05f4ee55a830ec52ce23580733471df89450caa0d389cc77c9966186bd9d2d64e57403638
 DIST pytest-2.5.2.tar.gz 608703 SHA256 962452611799878616d6df5e7674cc2c356f902ed005dc4dae9d4e79bb8abda4 SHA512 d291f229f4c0a2132c437dde6ca04bf87701fe270c2fa314104badad9221ab866251890c66387d23fefd3ab1f928ee3b290dac21e3d62e7660af8903e85a2f36 WHIRLPOOL 47588d3a2b62f9a8f4df248b2f8b4c8b4b86365839e766bf644ea6c54d0f75c92ae139050cd6a5db080c076b9f867be48fe9c81da19db5285a382c1cda918310
+DIST pytest-2.6.1.tar.gz 627761 SHA256 994dabcb3149659d259add2aa7d11bff4d35efb7cf4c8233fa9b0b62c1255c3c SHA512 1bfbe27491800943484616a37cfe0f2f8677e3b2a25aee19f842bdf66a9c0205af8c2aecaeb50823970ab9f7042b1bb9115e3c4d689fe568a17a062c50ead829 WHIRLPOOL cae1ea28723c62b87a027e3a78ab417e99cb12d412c83131058b185cffae12a215ef07459144c30b7028e202407549db76d877cd1c9fbe6cb2e39bc5da9df421
 EBUILD pytest-2.3.4.ebuild 1604 SHA256 d91949eea7f8041bb7c693bfa96880e58e0d5062d224df8800d35b2520672db3 SHA512 11d41756e876dbec4e57ca10e1431d60fd3fe4fcbe258d37ee264a99b4894338e2951334f8b30bcd28f71e4d76040e624cb094fc347b151b2536a7e9295f9b8d WHIRLPOOL 6ac6be6e6e349a64a9a722073a9654c9d01819dcf9bff5c2e917c823827da6a6a4fe74d88cc04583a241076e44675d8bde5b65b33192912162c33d3d10418c62
 EBUILD pytest-2.3.5.ebuild 1563 SHA256 fedfd81744d3fae14868c6559a0a8fc6299a77b050bacc098b869cdd0fc33b40 SHA512 62a2b7ddd9e37bfce33203a62469fc3b1bd385ecbdf9de3d9852327a8223593abe03628de48bc164f090977c4409f6d766f75103c95e2647440ff734479d8199 WHIRLPOOL 84e3e96b12bd2e7ba41ec8a09c41961c37c29ae72e97caecfa97b29a99681d04f03f5ae10639760a6e1b0a6bc022e598940ad2d59dafa4d1b5dadd3d6da89162
 EBUILD pytest-2.4.2.ebuild 1901 SHA256 0c4453f4dd1db13368298c4498336c6d8c1b85e6bf1e47f40544e89d50b8dc18 SHA512 ab172dff03380e33632170bf116c19c759ba68109ee0eef49019dec9316640d02375d6de074631a539a0c0cafd76a69fda0fe9382cd415b3ba9fb133d0289856 WHIRLPOOL 3a5a3ecf10264b5139ea70a6ae5aac0692011ea511ff9816d4abf1a68929b3e2f34f55c55b255ff0023db88b155e6c51bf420031492b9314034b7429cce4afa9
 EBUILD pytest-2.5.2.ebuild 1854 SHA256 eb4fc2c6a853e6b64bd095797fa301d54616355890556c9abc5db6028aa30d9b SHA512 912f51b9de5c7be2a1a0480ecc74d7b283df1b1afcf26df37f1c4a450234481e83eebbb17e58991c5d6c621aef9012a33bf01641c4edf5e902987d36a546a990 WHIRLPOOL 8a7a3da263b6acb2afb41df09584129a6e0ee6b94f8564cbab5726616d3f58d0be5dd857057173b0bcccb03e6c490f3ee15f7276af2c5e7fa4d8f302565e1af7
-MISC ChangeLog 12405 SHA256 3877b5e941bf074686dd4fcdbb579b537b53afa767dc18c6e1ade6d869ede3d4 SHA512 e80cfa086e47161f975674610564614b687306a04e13fa7a8fd3f5caaeb0f656aaca5359c9db6bd8156589da6840d1bef788ea6b1bf455204b67622e6f2426e7 WHIRLPOOL 014eb20db3b933d9c3e4f7226df023d6eb53bbc911d85ce77b12e560e8241bd286dc1e503fd2032ecd83661c716a9803325a4ff3093e60c79641f9ac34ae5551
+EBUILD pytest-2.6.1.ebuild 1940 SHA256 09ddd32c20858bb51e67764b2a8cdd6c7306c8483aba4e981c91a38cc8cf0dc3 SHA512 1b38a853638b26ab181f1919915da6ed6dc64b1c0369d94aea3282a1391ae73964b47b5b1acdfcfb2eb1107ead6c957c52f2dba205e4bb137c156135d06f384b WHIRLPOOL 9bfd01d3028c78332eb6e79929b113d87e1b49117ef52d65a31b5178dc67ce7e9013670c31d782bf405f6496fda634ca4e713d243428ab3b639b71aa636ce4f4
+MISC ChangeLog 12536 SHA256 29908286b6af2b46773ea82c5947cd0399dbf10300b4a5d8bec5730ef4ab0cd7 SHA512 8817c38fcf62f5e742bcf33beaa2c78db0f048079c673c5314c57842c71547f87dc4174372bc27ea54c387ee8b68983beab522eae3a3608e7327470af0785efb WHIRLPOOL 8b037a5f985ed45c766f6c4c9499d2ee52b52d29e6a43f45ed7a3f5b86377d22faa5689ed1393f7eeae6143ca6512bdce7d42b263092d4e1e7277a97558b7d30
 MISC metadata.xml 229 SHA256 d84d28d5adf361bcc2b76c4b2c47920c5b06472add64c47c790522f180f93dce SHA512 9ad7198911f7c6318bcca718f8ab1d436ea14df3edefab5d5b20e36f9ab2c06f3d7d1d3a89ace9b6485b36a93bae88db28d443f51a375c8c2b8f4fe750657139 WHIRLPOOL 0aa5c9b1a9e5f07dfff7cd90a8ecb9ba54820d13261b822a8978492ff3a22369d27cafae2f772f76aac0f55f42e4b636b7c5190677eb6404be6002782ee79925
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlPjQJ8ACgkQVWmRsqeSphOo/gCfXBjvkvI60s1w22eGIs8G+Y1R
-M8YAnAjW4Wh6Rdr/+f5Vrt7DUul+xRts
-=SJ5S
+iEYEAREIAAYFAlPsZbEACgkQso7CE7gHKw3U4QCeJrjjimUOgFNtVW1j5H6ce67e
+G4QAoK7d6aWip6ecsd8WHH9SQV0C7TCU
+=6EXh
 -----END PGP SIGNATURE-----
