@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pytest
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pytest/ChangeLog,v 1.96 2014/08/07 09:02:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pytest/ChangeLog,v 1.97 2014/08/14 07:39:48 idella4 Exp $
+
+*pytest-2.6.1 (14 Aug 2014)
+
+  14 Aug 2014; Ian Delaney <idella4@gentoo.org> +pytest-2.6.1.ebuild:
+  bump; drop py2.6 pypy2_0
 
   07 Aug 2014; Jeroen Roovers <jer@gentoo.org> pytest-2.4.2.ebuild:
   Stable for HPPA (bug #506042).
